[HUBZERO][#6998][PLG_GROUPS_FORUM][MEDIA] Fixing issue with delete post link not showing and making links visible all the time

--- a/media/system/less/comments.less
+++ b/media/system/less/comments.less
@@ -42,11 +42,11 @@
 		.comment-options {
 			color: @white;
 			font-size: 90%;
-			visibility: hidden;
+			//visibility: hidden;
 
 			a {
 				margin-right: 1em;
-				visibility: hidden;
+				//visibility: hidden;
 				color: @commentOptionColor;
 				border: none;
 
@@ -54,10 +54,10 @@
 					margin-right: 0.4em;
 				}
 			}
-			&:hover a,
+			/*&:hover a,
 			a.reply {
 				visibility: visible;
-			}
+			}*/
 			&:hover a {
 				color: @commentOptionHoverColor;
 			}
